# sharepio

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/spdl/: config.toml  pyproject.toml  requirements.txt
src/spdl/src/spdl/: __init__.py  __main__.py  cli.py  typedefs.py  utils.py
src/spdl/src/spdl/client/: __init__.py  async_client.py  client.py  sync_client.py
src/spup/: upload.py
tests/: test_dumb.py
