[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sharepio"
version = "0.0.1"

description = "Sharepoint upload/download util."

readme = "README.md"

requires-python = ">=3.10"

license = { file = "LICENSE.txt" }

keywords = ["microsoft", "sharepoint"]

authors = [
  { name = "Guillaume Latour", email = "g0latour@gmail.com" },
  { name = "Florian Indot", email = "findot@gmail.com" },

]

maintainers = [
  { name = "Guillaume Latour", email = "g0latour@gmail.com" },
  { name = "Florian Indot", email = "findot@gmail.com" },
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
] # Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/

dependencies = ["msgraph-sdk"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
